#####                           CHANGELOG                                  #####
#####                                                                      #####
################################################################################

0.11.* UPDATES
--------------------------------------------------------------------------------
9: Added samtools_concatenated_reads_tRNA_flagstats to the dedicated resource allocations 
8: Added featureCounts options to account for non-default gtf file in quantification (-t and -g options)
7: Additional server resources added to the server_config file
6: Option for DE testing with edgeR added
5: sampleInfo-file option added
4: Config allows now relatives PATHs and adjustes them tot eh current project folder
3: Parameter for minimum coverage for novel miRNA detection added
2: Quantification table for reference counts added
1: New dev branch, identical to 0.10

0.10 Stable release
--------------------------------------------------------------------------------

0.9.* UPDATES
--------------------------------------------------------------------------------
3: Critical bugfix - Separate 3' and 5' adapter trimming was doing wrong
2: Added the option not to use any adapter trimming
1: New dev-branch opened

0.8.1: Updates 0.7.9 was not merged into the release version, fixed
--------------------------------------------------------------------------------

0.8 Stable release
--------------------------------------------------------------------------------

0.7.* UPDATES
--------------------------------------------------------------------------------
9: Missing bai dependency input added to seqkit rule (might be the real reason for error fixed in 7:...)
8: Pipeline allows now separate 3' and 5' adapter trimming
7: Critical bugfix, seqkit rules reported suddenly non-zero exit errors
6: Case caught, when no novel genes are detected
5: Critical bugfix in the seqkit output
4: Path bug in final report fixed (after renaming not adjusted)