@@ -6,6 +6,8 @@
 
 0.11.* UPDATES
 --------------------------------------------------------------------------------
+11: Bugfix, server-config did not receive the project path, if not given explicitely in config file
+10: Added samtools_nonTRNA_reads_phix_flagstats to default resource allocation
 9: Added samtools_concatenated_reads_tRNA_flagstats to the dedicated resource allocations 
 8: Added featureCounts options to account for non-default gtf file in quantification (-t and -g options)
 7: Additional server resources added to the server_config file
